--- a/Styles/Portfolio.css
+++ b/Styles/Portfolio.css
@@ -3,7 +3,7 @@
 
 
 
-/* header related image */
+/*header related style*/
 .banner {
     width: 1320px;
     height: 600px;
@@ -11,6 +11,7 @@
     background-image: url('../resources/Banner.png');
     border-radius: 16px;
     background-position: center;
+
 
 }
 
@@ -21,15 +22,163 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    padding: 233px 344px 344px ;
+
 }
 
 .banner-title {
     color: #FFF;
-    text-align:center;
+    text-align: center;
     font-family: Merriweather;
     font-size: 72px;
     font-style: normal;
     font-weight: 900;
-    
+
+}
+
+/*body related style*/
+.OFF {
+    color: #F00;
+    text-align: center;
+    font-family: Inter;
+    font-size: 88px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.holyday-deals {
+    color: #F00;
+    text-align: center;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.all-categories {
+    color: #070211;
+    text-align: center;
+    font-family: Inter;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.happy-new-year {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner-middle {
+    background-image: url('../resources/Vectorrr.png');
+    width: 1320px;
+    height: 600px;
+    flex-shrink: 0;
+    display: flex;
+
+
+}
+
+.schedule {
+    width: 1320px;
+    height: 482px;
+    background-image: linear-gradient(#f58c8c, #FF000000);
+}
+
+.schedule-title {
+    color: #F00;
+    text-align: center;
+    font-family: Inter;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 56px;
+    /* 175% */
+    text-transform: capitalize;
+
+}
+
+
+
+.banner-welcome {
+    color: #FFF;
+    font-family: Merriweather;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 88px;
+    letter-spacing: 7.04px;
+
+}
+
+.welcome-dis {
+    color: #FFF;
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+}
+
+.join-now {
+    color: #FFF;
+    text-align: left;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
+}
+
+.schedule-title-color {
+    color: black;
+    text-align: center;
+}
+
+.schedule-button {
+
+    padding: 16px 32px;
+    border-radius: 8px;
+    background: #F00;
+    color: #FFF;
+    border: 0;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+
+}
+
+.best-offer {
+    color: #F00;
+    text-align: left;
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.comming-soon {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: capitalize;
+}
+
+.circle-image {
+    width: 463px;
+    height: 463px;
+    flex-shrink: 0;
+    border-radius: 463px;
+    border: 15px solid #F00;
+    padding: 15px;
+    align-items: center;
+}
+
+.new-year-date{
+    color: #F00;
+    text-align: right;
 }
